# gstreamer_send_camera

./: CMakeLists.txt  Procedimiento.md  readme.md
src/: multiplexer.cpp  receiver.cpp  sender.cpp  test.cpp
